Increase memory in sbt